[gd_scene load_steps=18 format=3 uid="uid://ccivh48p8we6y"]

[ext_resource type="Texture2D" uid="uid://gs838o4pfe1u" path="res://shop.png" id="1_815gd"]
[ext_resource type="Texture2D" uid="uid://dg50pfqwo16rw" path="res://O2_icon.png" id="2_g8rmm"]
[ext_resource type="Script" path="res://shop_ui.gd" id="2_lcova"]
[ext_resource type="Texture2D" uid="uid://dek2xhv6y8tus" path="res://gun_icon.png" id="3_te3yi"]
[ext_resource type="Texture2D" uid="uid://dyanq7uaj550r" path="res://jetpack_icon.png" id="4_40ioq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p77dy"]
atlas = ExtResource("2_g8rmm")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssk83"]
atlas = ExtResource("2_g8rmm")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1dw2"]
atlas = ExtResource("2_g8rmm")
region = Rect2(0, 18, 14, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_me488"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p77dy")
}],
"loop": false,
"name": &"Lvl_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssk83")
}],
"loop": true,
"name": &"Lvl_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1dw2")
}],
"loop": true,
"name": &"Lvl_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_iscc5"]
atlas = ExtResource("3_te3yi")
region = Rect2(0, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_g88ud"]
atlas = ExtResource("3_te3yi")
region = Rect2(16, 0, 16, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1wdq"]
atlas = ExtResource("3_te3yi")
region = Rect2(0, 12, 16, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_003ps"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iscc5")
}],
"loop": false,
"name": &"Lvl_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g88ud")
}],
"loop": true,
"name": &"Lvl_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1wdq")
}],
"loop": true,
"name": &"Lvl_3",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h5vjd"]
atlas = ExtResource("4_40ioq")
region = Rect2(0, 0, 14, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngvh5"]
atlas = ExtResource("4_40ioq")
region = Rect2(14, 0, 14, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y32k"]
atlas = ExtResource("4_40ioq")
region = Rect2(0, 20, 14, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_r6lp2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5vjd")
}],
"loop": true,
"name": &"Lvl_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngvh5")
}],
"loop": true,
"name": &"Lvl_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y32k")
}],
"loop": true,
"name": &"Lvl_3",
"speed": 5.0
}]

[node name="shop_UI" type="Sprite2D"]
texture = ExtResource("1_815gd")
script = ExtResource("2_lcova")

[node name="O2_icon" type="AnimatedSprite2D" parent="."]
position = Vector2(15, -13)
sprite_frames = SubResource("SpriteFrames_me488")
animation = &"Lvl_1"

[node name="Gun_icon" type="AnimatedSprite2D" parent="."]
position = Vector2(-16, 15)
sprite_frames = SubResource("SpriteFrames_003ps")
animation = &"Lvl_1"

[node name="Jetpack_icon" type="AnimatedSprite2D" parent="."]
position = Vector2(-16, -13)
sprite_frames = SubResource("SpriteFrames_r6lp2")
animation = &"Lvl_1"

[node name="jetpack_buy" type="Button" parent="."]
offset_left = -29.0
offset_top = -23.0
offset_right = -3.0
offset_bottom = -3.0
flat = true

[node name="O2_buy" type="Button" parent="."]
offset_left = 3.0
offset_top = -22.0
offset_right = 29.0
offset_bottom = -4.0
flat = true

[node name="gun_buy" type="Button" parent="."]
offset_left = -29.0
offset_top = 6.0
offset_right = -3.0
offset_bottom = 26.0
flat = true

[connection signal="pressed" from="jetpack_buy" to="." method="_on_jetpack_buy_pressed"]
[connection signal="pressed" from="O2_buy" to="." method="_on_o_2_buy_pressed"]
[connection signal="pressed" from="gun_buy" to="." method="_on_gun_buy_pressed"]
